syntax = "proto3";

package org.study.netty.domain;

option java_package = "org.study.netty.domain";
option java_multiple_files = true;
option java_outer_classname = "MsgInfo";

message MsgBody {

  string channelId = 1;
  string msgInfo = 2;

}